  (set-process-input! (encrypt-input (process-input) rx-key cfb-decrypt))
  
  * Added the lib/filter module
  * Added filter-output, filter-input and filter-port to lib/filter
  * Added the lib/crypto-port module
  * Added the buffer-empty? primitive.
  * Modified make-buffer to make capacity optional
  * Added the crypto-port test suite.

- 5/08/2006, Integration of ECDH cipher from LibTomCrypt
  * Added (random? value) -> #t or #f
  * Added mqo_ecdh_key subtype of mqo_key
  * Added (make-ecdh-key key-size data) -> ecdh-key
  * Added (import-ecdh data) -> ecdh-key
  * Added (export-public-ecdh key) -> string
  * Added (export-private-ecdh key) -> string
  * Added (ecdh-shared-secret local remote) -> string
  * Added (ecdh-key? value) -> #t or #f
  * Added (ecdh-public-key? value) -> #t or #f
  * Added (ecdh-private-key? value) -> #t or #f
  * Added tests for AES, XOR, BASE64, ECDH to test/crypto

- 5/07/2006, Integration of AES cipher from LibTomCrypt
  * Added mqo_aes_key subtype of mqo_key
  * Added (make-aes-key key-size data) -> aes-key
  * Added (aes-key? value) -> #t or #f
  * Added (aes-encrypt aes-key plaintext random) -> ciphertext
  * Added (aes-decrypt aes-key ciphertext) -> plaintext
  * Added (xor-string string mask) -> string
  * Added lib/cfb, a generic implementation of Cipher-Feedback Mode.
  * Added (key-size key) -> integer
  * Added (key-block-size key) -> integer
  * Added bin/build-lib.sh which automatically builds all modules in the
    lib subdirectory.
  * Added (encode64 string) -> string
  * Added (decode64 string) -> string

- 1/09/2006, Integration of LibTomCrypt
  * Added libtomcrypt 1.0 to the source tree with some light modifications to
    integrate with MOSVM.
  * Added support for LTC's pseudorandom number generators and entropy
    gathering routines.
  * Added the <random> type.
  * Added the make-random primitive.
  * Added the add-entropy primitive.
  * Added the random-string primitive.
  * Added the random-quad primitive.